--- a/index.html
+++ b/index.html
@@ -10,33 +10,16 @@
 </body>
 </html>
 
-<!--navbar-->
-<nav class="navbar navbar-expand-md navbar-secondary">
-    <div class="container-xxl">
-        <a href="#main" class="navbar_brand">
-            <span class="fw-bold text-secondary">
-                Earth Sciences Society
-            </span>
-        </a>
-        <!--toggle button for mobile nav-->>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main-nav" aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-        <!--navbar links-->
-        <div class="collapse navbar-collapse justify-content-center align-center" id="main-nav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a href="#team" class="nav-link">Team</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#events" class="nav-link">Events Calendar</a>
-                </li>
-                <li class="nav-item">
-                    <a href="#gallery" class="nav-link">Gallery</a>
-                </li>
-                <!--To be added: #Merch and #Your corner-->
-            </ul>
+<!--header-->
+<div class="row">
+    <div class="container-lg m-3 p-2 rounded border shadow-lg">
+        <div class="col-2">
+            <img src="/assets/ess_logo.png" alt="ess_logo" class="img-fluid">
+        </div>
+        <div class="col-10">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
         </div>
     </div>
-</nav>
+    <!--add "has-bg-img" to class incase of a background image-->
+    <!--add this to the division <img class="" src="...png" alt="...">-->
+</div>
