--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!--header-->
 <div class="row">
     <div class="container-lg m-3 p-2 rounded border shadow-lg">
-        <div class="col-2">
+        <div class="col-2 text center">
             <img src="/assets/ess_logo.png" alt="ess_logo" class="img-fluid">
         </div>
         <div class="col-10">
