--- a/index.html
+++ b/index.html
@@ -11,15 +11,25 @@
 </html>
 
 <!--header-->
-<div class="row">
-    <div class="container-lg m-3 p-2 rounded border shadow-lg">
-        <div class="col-2 text center">
-            <img src="/assets/ess_logo.png" alt="ess_logo" class="img-fluid">
-        </div>
-        <div class="col-10">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-        </div>
+<div class="row border">
+    <div class="container-lg me-3 ms-2 p-1 border">
+        <div class="row justify-content-center align-content-center">
+            <div class="col-1 border d-none d-md-block">
+                <img src="/assets/ess_logo.png" alt="ess_logo" class="img-fluid">
+            </div>
+            <div class="col-10 border">
+                <div class="row text-center">
+                    <h1>Earth Science Society</h1>
+                </div>
+                <div class="row text-center">
+                    <h5>Indian Institute of Technology Kanpur</h5>
+                </div>
+            </div>
+            <div class="col-1 border d-none d-md-block">
+                <img src="/assets/ess_logo.png" alt="iitk.logo" class="img-fluid">
+            </div>
+        </div>    
     </div>
-    <!--add "has-bg-img" to class incase of a background image-->
-    <!--add this to the division <img class="" src="...png" alt="...">-->
 </div>
+<!--add "has-bg-img" to class incase of a background image-->
+<!--add this to the division <img class="" src="...png" alt="...">-->
