--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 </html>
 
 <!--header-->
-<div class="row border">
-    <div class="container-lg me-3 ms-2 p-1 border">
-        <div class="row justify-content-center align-content-center">
-            <div class="col-1 border d-none d-md-block">
+<div class="row mx-2 border justify-content-center">
+    <div class="container-lg mx-5 my-3 p-1 border">
+        <div class="row justify-content-center align-items-center">
+            <div class="col-2 border d-none d-sm-block">
                 <img src="/assets/ess_logo.png" alt="ess_logo" class="img-fluid">
             </div>
-            <div class="col-10 border">
+            <div class="col-8 col-md-6 border justify-content-center">
                 <div class="row text-center">
-                    <h1>Earth Science Society</h1>
+                    <h1 class="display-4">Earth Science Society</h1>
                 </div>
                 <div class="row text-center">
                     <h5>Indian Institute of Technology Kanpur</h5>
                 </div>
             </div>
-            <div class="col-1 border d-none d-md-block">
+            <div class="col-2 border d-none d-md-block">
                 <img src="/assets/ess_logo.png" alt="iitk.logo" class="img-fluid">
             </div>
         </div>    
@@ -33,3 +33,6 @@
 </div>
 <!--add "has-bg-img" to class incase of a background image-->
 <!--add this to the division <img class="" src="...png" alt="...">-->
+<!--navbar-->
+
+<!--carousal-->
