--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-lg mx-5 my-3 p-1 border">
         <div class="row justify-content-center align-items-center">
             <div class="col-2 border d-none d-sm-block">
-                <img src="/assets/ess_logo.png" alt="ess_logo" class="img-fluid">
+                <img src="assets/ess_logo.png" alt="ess_logo" class="img-fluid">
             </div>
             <div class="col-8 col-md-6 border justify-content-center">
                 <div class="row text-center">
@@ -26,7 +26,7 @@
                 </div>
             </div>
             <div class="col-2 border d-none d-md-block">
-                <img src="/assets/ess_logo.png" alt="iitk.logo" class="img-fluid">
+                <img src="assets/ess_logo.png" alt="iitk.logo" class="img-fluid">
             </div>
         </div>    
     </div>
