--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
+    <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </body>
 </html>
 
@@ -33,6 +35,190 @@
 </div>
 <!--add "has-bg-img" to class incase of a background image-->
 <!--add this to the division <img class="" src="...png" alt="...">-->
-<!--navbar-->
 
-<!--carousal-->
+<!--navbar-->
+<!--https://youtu.be/qNifU_aQRio-->
+<!--Check for how to customize/create the navigation bar-->
+<!--Watch the end of the video to add a Search button to the top of the page-->
+<nav class="navbar navbar-light mx-3 my-3 p-1 bg-light sticky-top navbar-expand-sm"> <!--sticky-top sticks the navbar to the very top of the page-->
+    <a href="index.html" class="navbar-brand d-sm-none h1">
+        <img src="assets/ess_logo.png" alt="ess_logo" width="30" height="30">
+        Earth Science Society
+    </a>
+    <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav"> <!--navbarNav is a variable to be used in the data-target-->
+        <ul class="navbar-nav mx-auto">
+            <li class="nav-item active px-3">
+                <a href="index.html" class="nav-link active">
+                    Home
+                </a>
+            </li>
+            <li class="nav-item active px-3">
+                <a href="pages/team.html" class="nav-link">
+                    Core Team
+                </a>
+            </li>
+            <li class="nav-item active px-3">
+                <a href="pages/events_main.html" class="nav-link">
+                    Events
+                </a>
+            </li>
+            <li class="nav-item dropdown px-3">
+                <a href="#" class="nav-link dropdown-toggle" id="eventsdropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Gallery
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="eventsdropdown">
+                    <li>
+                        <a href="#" class="dropdown-item disabled">
+                            Teacher's Day
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#" class="dropdown-item disabled">
+                            Fresher's Night
+                        </a>
+                    </li>
+                </ul>
+            </li>
+            <li class="nav-item px-3">
+                <a href="#" class="nav-link disabled">
+                    Merch
+                </a>
+            </li>
+        </ul>
+    </div>
+</nav>
+
+<!--carousel-->
+<!--edit all images to 3x1 landscape dimension-->
+<div class="row mx-2 border justify-content-center">
+    <div class="container-lg justify-content-center mx-5 my-1 border">
+        <div id="ess-carousel" class="carousel slide" data-bs-ride="carousel" data-bs-slide="false">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#ess-carousel" data-bs-slide-to="0" class="active bg-dark" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#ess-carousel" data-bs-slide-to="1" class="bg-dark" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#ess-carousel" data-bs-slide-to="2" class="bg-dark" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active car-item">
+                <img src="assets/Carousal_exp.png" class="d-block mx-auto w-100 car-image" alt="...">
+              </div>
+              <div class="carousel-item car-item">
+                <img src="assets/Carousal_exp.png" class="d-block mx-auto w-100 car-image" alt="...">
+              </div>
+              <div class="carousel-item car-item">
+                <img src="assets/Carousal_exp.png" class="d-block mx-auto w-100 car-image" alt="...">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#ess-carousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#ess-carousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+    </div>
+</div>
+
+<!--main content-->
+<div class="row mx-2 border justify-content-center">
+    <div class="container-lg mx-5 my-3 p-1 border">
+        <div class="row justify-content-center">
+            <div class="col-8 px-3 justify-content-center">
+                <p>
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim ullam aperiam, tenetur quisquam magni odit facilis libero numquam nesciunt modi corporis non nostrum esse est voluptatem delectus id nulla consequatur.
+                </p>
+                <div class="row mx-1 my-2 border">
+                    <p>
+                        "Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eos ipsum quos eligendi veniam odio saepe sequi eum magnam natus at."
+                    </p>
+                    <p class="text-end">
+                        -Ayush Gupta, President
+                    </p>
+                </div>
+                <div class="row mx-1 my-2 border">
+                    <p>
+                        "Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum consequuntur eos animi iure autem unde quaerat mollitia facilis assumenda ullam veniam deserunt voluptatibus, rem quo harum facere dolor repellat quibusdam?"
+                    </p>
+                    <p class="text-end">
+                        -Dr Indra Sekhar Sen, Faculty Advisor
+                    </p>
+                </div>
+            </div>
+            <div class="col-4 justify-content-center">
+                <div class="row mx-1 my-1 border">
+                    <h4>
+                        What's new?
+                    </h4>
+                    <ul class="mx-3" style="list-style-type: disc;">
+                        <li>
+                            <a href="#"> 
+                                This is the 1st announcement.
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                Second announcement.
+                            </a>
+                        <li>
+                            <a href="#">
+                                Announcement 3
+                            </a>
+                        </li>    
+                        </li>
+                    </ul>
+                </div>
+                <div class="row mx-1 my-1 border">
+                    <h4>
+                        Upcoming Events
+                    </h4>
+                    <ul class="mx-3" style="list-style-type: disc;">
+                        <li>
+                            <a href="#">
+                                (dd/mm/yyyy) Event 1
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                (dd/mm/yyyy) Event 2
+                            </a>
+                        </li>
+
+                    </ul>
+                    <!--<div class="elfsight-app-be12056e-689c-4ac8-8512-4ecb61e11562" data-elfsight-app-lazy></div>-->
+                </div>
+                    <!--either this or gooogle calendar-->
+                <div class="row mx-1 my-1 border">
+                    <h4>
+                        Social Media feed
+                    </h4>
+                    <!--One social media handle feed-->
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--footer-->
+<div class="row mx-0 border justify-content-center">
+    <div class="container-lg mx-5 my-3 bg-dark text-center border">
+        <div class="row justify-content-center">
+            <div class="col-5 my-2">
+                <h5 class="text-white">
+                    Quick Links
+                </h5>
+                <p class="text-white">
+                    <a href="https://www.iitk.ac.in/es/">Dept. Of Earth Sciences</a><br>
+                    <a href="https://www.iitk.ac.in/">IIT Kanpur Home</a><br>
+                </p>
+            </div>
+        </div>
+        <small class="justify-content-center text-white">
+            designed and developed by <a href="https://swastiksumanbehera.github.io//" class="">Swastik Suman Behera</a>
+        </small>
+    </div>
+</div>
