--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
             </div>
         </div>
         <small class="justify-content-center text-white">
-            designed and developed by <a href="https://swastiksumanbehera.github.io//" class="">Swastik Suman Behera</a>
+            designed by <a href="https://swastiksumanbehera.github.io//" class="">Swastik Suman Behera</a>
         </small>
     </div>
 </div>
