--- a/subpages/event.html
+++ b/subpages/event.html
@@ -90,30 +90,13 @@
 </nav>
 
 <!--main content-->
-<!--Posters potrait of 210x280 dimension-->
-<!--suggestion: go for a fading carousal in upcoming events if a lot of empty space is present-->
-<div class="row mx-2 border justify-content-center">
-    <div class="container-lg mx-5 my-3 p-1 border">
-        <div class="row py-1 justify-content-center">
-            <h4 class="text-center">
-                Upcoming
-            </h4>
-        </div>
-        <div class="row py-1 justify-content-center">
-            <div class="col-4 col-lg-3 mx-1 justify-content-center d-block border">
-                <a href="../subpages/event.html"><img class="img-fluid event-image" src="../assets/posters/event_poster.png" alt="template"></a>
-            </div>
-        </div>
-        <div class="row py-1 justify-content-center">
-            <h4 class="text-center">
-                Previous Events
-            </h4>
-            <div class="col-4 col-lg-3 mx-2 justify-content-center d-block border">
-                <a href="../subpages/event.html"><img src="../assets/posters/Freshers Night.jpeg" alt="freshers_pos" class="img-fluid event-image"></a>
-            </div>
-            <div class="col-4 col-lg-3 mx-2 justify-content-center d-block border">
-                <a href="../subpages/event.html"><img src="../assets/posters/Teachers Day.jpeg" alt="teachers_day_pos" class="img-fluid event-image"></a>
-            </div>
+<div class="row border justify-content-center">
+    <div class="container-lg p-1 border justify-content-center">
+        <h3 class="my-2 text-center">
+            Name of the Event
+        </h3>
+        <div class="col-5 col-lg-4 mx-1 d-block border">
+            <img src="../assets/posters/Freshers Night.jpeg" alt="event" class="img-fluid mx-3">
         </div>
     </div>
 </div>
