--- a/subpages/freshers.html
+++ b/subpages/freshers.html
@@ -16,10 +16,10 @@
 </html>
 
 <!--header-->
-<div class="row border justify-content-center" style="background-image: url(../assets/universe-1566159_1920.jpg);">
+<div class="row border justify-content-center" style="background-image: url(../assets/pexels-quang-nguyen-vinh-2649403.jpg); background-position: center; background-size: cover;">
     <div class="col-2 py-1 d-none d-md-block">
         <div class="container">
-            <img src="../assets/ESS_logo.png" alt="eagesc logo" style="height: 100px; width:auto;">
+            <img src="../assets/ESS_logo.png" alt="eagesc logo" style="padding-top: 13px; height: 140px; width:auto;">
         </div>
     </div>
     <div class="col justify-content-center py-2">
@@ -33,45 +33,42 @@
                 INDIAN INSTITUTE OF TECHNOLOGY KANPUR
             </h4>
         </div>
+        <div class="row justify-content-center">
+            <nav class="navbar navbar-light sticky-top navbar-expand-md">
+                <a href="../index.html" class="navbar-brand mx-3 h1 d-md-none">
+                    <i class="fa-solid fa-house-chimney" style="color: white;"></i>
+                </a>
+                <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="mx-3 navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa-solid fa-bars" style="color: white;"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav"> <!--navbarNav is a variable to be used in the data-target-->
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item active px-5">
+                            <a href="../index.html" onmouseover="this.style.color='greenyellow';" onmouseout="this.style.color='white';" class="nav-link navbar-active navbar-links" style="color: white;">
+                                <b>Home</b>
+                            </a>
+                        </li>
+                        <li class="nav-item px-5">
+                            <a href="../pages/team.html"  onmouseover="this.style.color='greenyellow';" onmouseout="this.style.color='white';" class="nav-link navbar-links" style="color: white;">
+                                <b>Team</b>
+                            </a>
+                        </li>
+                        <li class="nav-item px-5">
+                            <a href="../pages/events_main.html" class="nav-link navbar-links" style="color: greenyellow;">
+                                <b>Events</b>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
     <div class="col-2 py-1 d-none d-md-block">
         <div class="container">
-            <img src="../assets/IITK_logo.png" alt="eagesc logo" style="height: 100px; width:auto;">
+            <img src="../assets/IITK_logo.png" alt="eagesc logo" style="padding-top: 13px; height: 140px; width:auto;">
         </div>
     </div>
 </div>
-
-<!--navbar-->
-<!--https://youtu.be/qNifU_aQRio-->
-<!--Check for how to customize/create the navigation bar-->
-<!--Watch the end of the video to add a Search button to the top of the page-->
-<nav class="navbar sticky-top navbar-expand-md"> <!--sticky-top sticks the navbar to the very top of the page-->
-    <a href="index.html" class="navbar-brand h1 d-md-none">
-        <img src="../assets/ESS_logo.png" alt="ess_logo" style="height: 35px; width: auto;">
-    </a>
-    <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fa-solid fa-bars" style="color: white;"></i>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav"> <!--navbarNav is a variable to be used in the data-target-->
-        <ul class="navbar-nav mx-auto">
-            <li class="nav-item active px-5">
-                <a href="../index.html" class="nav-link active navbar-links">
-                    Home
-                </a>
-            </li>
-            <li class="nav-item active px-5">
-                <a href="../pages/team.html" class="nav-link active navbar-links">
-                    Team
-                </a>
-            </li>
-            <li class="nav-item active px-5">
-                <a href="../pages/events_main.html" class="nav-link active navbar-links" style="color: #3533cb">
-                    Events
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
 
 <!--main content-->
 <div class="row mx-2 justify-content-center">
