--- a/pages/team.html
+++ b/pages/team.html
@@ -9,17 +9,17 @@
     <link href="https://db.onlinewebfonts.com/c/fc609eb62c0de5abdda2d091abaed228?family=Plantin+Infant+MT+Std+Bold" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body style= "background-image: linear-gradient(to bottom, #409fa5 , #2d888d, #2e3853, #162a31, #2e3853, #2d888d, #409fa5);">
+<body style= "background-image: linear-gradient(to bottom right, #028ea7, #7dd857)">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
 </body>
 </html>
 
 <!--header-->
-<div class="row border justify-content-center" style="background-image: url(../assets/universe-1566159_1920.jpg);">
+<div class="row border justify-content-center" style="background-image: url(../assets/pexels-quang-nguyen-vinh-2649403.jpg); background-position: center; background-size: cover;">
     <div class="col-2 py-1 d-none d-md-block">
         <div class="container">
-            <img src="../assets/ESS_logo.png" alt="eagesc logo" style="height: 100px; width:auto;">
+            <img src="../assets/ESS_logo.png" alt="eagesc logo" style="padding-top: 13px; height: 140px; width:auto;">
         </div>
     </div>
     <div class="col justify-content-center py-2">
@@ -33,60 +33,54 @@
                 INDIAN INSTITUTE OF TECHNOLOGY KANPUR
             </h4>
         </div>
+        <div class="row justify-content-center">
+            <nav class="navbar navbar-light sticky-top navbar-expand-md">
+                <a href="../index.html" class="navbar-brand mx-3 h1 d-md-none">
+                    <i class="fa-solid fa-house-chimney" style="color: white;"></i>
+                </a>
+                <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="mx-3 navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fa-solid fa-bars" style="color: white;"></i>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav"> <!--navbarNav is a variable to be used in the data-target-->
+                    <ul class="navbar-nav mx-auto">
+                        <li class="nav-item active px-5">
+                            <a href="../index.html" onmouseover="this.style.color='greenyellow';" onmouseout="this.style.color='white';" class="nav-link navbar-active navbar-links" style="color: white;">
+                                <b>Home</b>
+                            </a>
+                        </li>
+                        <li class="nav-item px-5">
+                            <a href="../pages/team.html" class="nav-link navbar-links" style="color: greenyellow;">
+                                <b>Team</b>
+                            </a>
+                        </li>
+                        <li class="nav-item px-5">
+                            <a href="../pages/events_main.html" onmouseover="this.style.color='greenyellow';" onmouseout="this.style.color='white';" class="nav-link navbar-links" style="color: white;">
+                                <b>Events</b>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
     </div>
     <div class="col-2 py-1 d-none d-md-block">
         <div class="container">
-            <img src="../assets/IITK_logo.png" alt="eagesc logo" style="height: 100px; width:auto;">
+            <img src="../assets/IITK_logo.png" alt="eagesc logo" style="padding-top: 13px; height: 140px; width:auto;">
         </div>
     </div>
 </div>
-
-<!--navbar-->
-<!--https://youtu.be/qNifU_aQRio-->
-<!--Check for how to customize/create the navigation bar-->
-<!--Watch the end of the video to add a Search button to the top of the page-->
-<nav class="navbar sticky-top navbar-expand-md"> <!--sticky-top sticks the navbar to the very top of the page-->
-    <a href="index.html" class="navbar-brand h1 d-md-none">
-        <img src="../assets/ESS_logo.png" alt="ess_logo" style="height: 35px; width: auto;">
-    </a>
-    <button type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" class="navbar-toggler" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <i class="fa-solid fa-bars" style="color: white;"></i>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav"> <!--navbarNav is a variable to be used in the data-target-->
-        <ul class="navbar-nav mx-auto">
-            <li class="nav-item active px-5">
-                <a href="../index.html" class="nav-link active navbar-links">
-                    Home
-                </a>
-            </li>
-            <li class="nav-item active px-5">
-                <a href="../pages/team.html" class="nav-link active navbar-links" style="color: #3533cb;">
-                    Team
-                </a>
-            </li>
-            <li class="nav-item active px-5">
-                <a href="../pages/events_main.html" class="nav-link navbar-links">
-                    Events
-                </a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
 <!--main content-->
-<div class="row mx-2 justify-content-center">
-    <div class="container-lg mx-5 my-3 p-1">
-        <div class="row justify-content-center">
+<div class="row my-1 justify-content-center">
             <div class="col justify-content-between">
-                <h3 class="p-1" style="text-align: center; 1px solid black; background-color: black; color: white; font-family: fantasy;">
+                <h3 class="p-1" style="text-align: center; background-color: black; color: white; font-family: fantasy;">
                     Core Team (2023-24)
                 </h3>
             </div>
-            <p class="normal-text">
-                <b>ESS is a student-led society in the Department of Earth Sciences, IIT Kanpur. The ESS 2023-24 term has 15 core team members. Each term has an assigned faculty advisor, who supervises the overall activities. This term also has 3 assigned Teaching Assistants (TA).</b>
-            </p>
-        </div>
-    </div>
+</div>
+<div class="row mx-1 justify-content-center">
+    <p class="normal-text">
+        <b>ESS is a student-led society in the Department of Earth Sciences, IIT Kanpur. The ESS 2023-24 term has 15 core team members. Each term has an assigned faculty advisor, who supervises the overall activities. This term also has 3 assigned Teaching Assistants (TA).</b>
+    </p>
 </div>
 
 <div class="row team-page">
@@ -112,7 +106,7 @@
     <div class="row my-2 justify-content-center">
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Ayush Gupta (President) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Ayush Gupta (President) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Ayush Gupta
                 </span>
@@ -127,7 +121,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Gourav Jaiswal (Vice-President) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Gourav Jaiswal (Vice-President) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Gourav Jaiswal
                 </span>
@@ -142,7 +136,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Harsh Verma (Secretary) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Harsh Verma (Secretary) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Harsh Verma
                 </span>
@@ -157,7 +151,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Hitesh Arunagiri (Secretary) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Hitesh Arunagiri (Secretary) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Hitesh Arunagiri
                 </span>
@@ -172,9 +166,9 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Keerthi Chandra (Treasurer) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Keerthi Chandra (Treasurer) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
-                    Keerthi Chandra Srinayak
+                    Keerthi Chandra
                 </span>
                 <span style="text-align: center;" class="team-des">
                     Treasurer
@@ -187,7 +181,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/stock_team.gif" class="img-fluid" alt="">
+                <img src="../assets/team/stock_team.gif" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Subhangi Jarwal
                 </span>
@@ -202,7 +196,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Swarn Raj Singh (Cultural Secretary) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Swarn Raj Singh (Cultural Secretary) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Swarn Raj Singh
                 </span>
@@ -217,7 +211,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Shreya Shukla (Cultural Secretary) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Shreya Shukla (Cultural Secretary) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Shreya Shukla
                 </span>
@@ -232,7 +226,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Sarthak Papney (Sports Secretary) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Sarthak Papney (Sports Secretary) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Sarthak Papney
                 </span>
@@ -247,7 +241,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Adarsh Mishra (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Adarsh Mishra (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Adarsh Mishra
                 </span>
@@ -262,7 +256,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Ayushi Nautiyal (C , M, and P Secretary) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Ayushi Nautiyal (C , M, and P Secretary) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Ayushi Nautiyal
                 </span>
@@ -277,7 +271,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Krish Agarwal (C, M, and P Secretary) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Krish Agarwal (C, M, and P Secretary) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Krish Agarwal
                 </span>
@@ -292,7 +286,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Ramswroop (Photographer) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Ramswroop (Photographer) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Ramswroop Ishram
                 </span>
@@ -307,7 +301,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Arya Sorate (Photographer) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Arya Sorate (Photographer) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Arya Sorate
                 </span>
@@ -322,9 +316,9 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/Swastik Suman Behera (Website) (new).png" class="img-fluid" alt="">
+                <img src="../assets/team/Swastik Suman Behera (Website) (new).png" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
-                    Swastik Suman Behera
+                    Swastik S. Behera
                 </span>
                 <span style="text-align: center;" class="team-des">
                     Website Handler
@@ -337,7 +331,7 @@
         </div>
         <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
             <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-                <img src="../assets/team/stock_team.gif" class="img-fluid" alt="">
+                <img src="../assets/team/stock_team.gif" class="img-fluid team-image" alt="">
                 <span style="text-align: center;" class="team-name">
                     Soubhagya Pandey
                 </span>
@@ -353,22 +347,18 @@
     </div>
 </div>
 
-<div class="row mx-2 justify-content-center">
-    <div class="container-lg mx-5 my-3 p-1">
-        <div class="row justify-content-center">
-            <div class="col justify-content-between">
-                <h3 class="p-1" style="text-align: center; 1px solid black; background-color: black; color: white; font-family: fantasy;">
-                    Teaching Assistants
-                </h3>
-            </div>
-        </div>
+<div class="row my-1 justify-content-center">
+    <div class="col justify-content-between">
+        <h3 class="p-1" style="text-align: center; background-color: black; color: white; font-family: fantasy;">
+            Teaching Assistants
+        </h3>
     </div>
 </div>
 
 <div class="row team-page justify-content-center">
     <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
         <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-            <img src="../assets/team/stock_team.gif" class="img-fluid" alt="">
+            <img src="../assets/team/stock_team.gif" class="img-fluid team-image" alt="">
             <span style="text-align: center;" class="team-name">
                 Mo Zaid
             </span>
@@ -383,7 +373,7 @@
     </div>
     <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
         <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-            <img src="../assets/team/stock_team.gif" class="img-fluid" alt="">
+            <img src="../assets/team/stock_team.gif" class="img-fluid team-image" alt="">
             <span style="text-align: center;" class="team-name">
                 Sukanya Mandal
             </span>
@@ -398,7 +388,7 @@
     </div>
     <div class="col-4 col-md-3 my-2 mx-4 justify-content-center">
         <div class="container py-4 team-box" style="display: flex; flex-direction: column; align-items: center;">
-            <img src="../assets/team/stock_team.gif" class="img-fluid" alt="">
+            <img src="../assets/team/stock_team.gif" class="img-fluid team-image" alt="">
             <span style="text-align: center;" class="team-name">
                 Swastik Deshmukh
             </span>
