--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <!--main content-->
 <div class="row justify-content-center" style="background-image: url(assets/pexels-ethan-sees-2534617.jpg); background-position: center; background-size: cover;">
     <div class="row justify-content-center" style="">
-        <h4 class="py-1" style="text-align: center; 1px solid black; font-family: fantasy;">
+        <h4 class="py-1" style="text-align: center; font-family: fantasy;">
             What's new?
         </h4>
         <a href="#">
